# movie-review-app-solana

./: .env  README.md  package-lock.json  package.json
components/: Form.tsx  InitializeMint.ts
models/: Movie.ts
rust-program/: Cargo.toml
rust-program/src/: processor.rs
utils/: constants.ts
